--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"nodemon server.js\"",
+    "start": "concurrently \"nodemon server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
